Fixed Html errors

--- a/project/pois.html
+++ b/project/pois.html
@@ -81,6 +81,17 @@
     <footer>
         <p>© <span id="currentyear"></span> ♌ Collin Maassen ☯ USA, Arizona</p>
         <p><span id="lastModified"></span></p>
+        <nav>
+            <a href="https://www.instagram.com/" class="icon">
+              <img src="images/instagram.svg" alt="Instagram">
+            </a>
+            <a href="https://www.facebook.com/" class="icon">
+              <img src="images/facebook.svg" alt="Facebook">
+            </a>
+            <a href="https://x.com/?lang=en" class="icon">
+              <img src="images/twitter.svg" alt="Twitter">
+            </a>
+          </nav>
     </footer>
 </body>
 </html>
