--- a/project/the-diver.html
+++ b/project/the-diver.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Diver</title>
     <meta
       name="description"
-      content="This page is dedicated to a dear friend. This is a tribute and a token of thanks for being a mentor to me in my life. When all seems crazy and I feel lost I know that the Diver will be there to pull me out of the deep. Thank you for being a great friend Dallas!"
-    />
-    <meta name="author" content="Collin Maassen" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;1,400;1,500&family=Volkhov:ital@0;1&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/the-diver.css" />
+      content="This page is dedicated to a dear friend. This is a tribute and a token of thanks for being a mentor to me in my life. When all seems crazy and I feel lost I know that the Diver will be there to pull me out of the deep. Thank you for being a great friend Dallas!">
+    <meta name="author" content="Collin Maassen">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;1,400;1,500&family=Volkhov:ital@0;1&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="styles/the-diver.css">
     <script src="../scripts/getdates.js" defer></script>
     <script src="scripts/the-diver.js"></script>
     <script src="scripts/carousel.js" defer></script>
@@ -35,13 +32,13 @@
       <div class="social-links">
         <nav>
           <a href="https://www.instagram.com/" class="icon">
-            <img src="images/instagram.svg" alt="Instagram" />
+            <img src="images/instagram.svg" alt="Instagram">
           </a>
           <a href="https://www.facebook.com/" class="icon">
-            <img src="images/facebook.svg" alt="Facebook" />
+            <img src="images/facebook.svg" alt="Facebook">
           </a>
           <a href="https://x.com/?lang=en" class="icon">
-            <img src="images/twitter.svg" alt="Twitter" />
+            <img src="images/twitter.svg" alt="Twitter">
           </a>
         </nav>
       </div>
