--- a/project/certificates.html
+++ b/project/certificates.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="cert1">
-            <h2><a href="https://phoenix.diventures.com/courses/open-water-diver-scuba-certification-course">Diventures</a></h2>
+            <h2><a href="https://phoenix.diventures.com/courses/open-water-diver-scuba-certification-course" target="_blank">Diventures</a></h2>
             <p>This diving school offers a variety of certification types. They offer a wide range of dates and times to allow for all to be able to attend and achieve their goals of becoming a scuba diver! <br>They also provide options for help planning trips to go diving. They truly are an all around great place to suit your diving needs. With options to rent or purchase your own epquipment they will set each diver up to conquer the open water.</p>
             <div class="cert-table">
                 <table>
@@ -73,7 +73,7 @@
             </div>
         </section>
         <section class="cert2">
-            <h2><a href="https://live4divin.com/open-water-diver-certification-beginner-">Phoenix Scuba</a></h2>
+            <h2><a href="https://live4divin.com/open-water-diver-certification-beginner-" target="_blank">Phoenix Scuba</a></h2>
             <div class="cert-table">
                 <table>
                     <thead>
@@ -113,7 +113,7 @@
             <p>This scub diving course offers training with experience for all ages 10 and up. They strive to teach everyone that the scary things of diving are not so frightful as long as you understand them. At Phoenix Scuba they offer classes for different experience levels. Giving you the training that you are seeking. <br><br>Another amazing thing that is offered here with Phoenix Scuba is the chance to go on a scuba trip of a lifetime. These trips offer all inclusive stays with plans for dives throughout a week long stay. This will give you all those amazing stories for you to be the talk of the office and/ or school. </p>
         </section>
         <section class="cert3">
-            <h2><a href="https://divearizona.com/courses/open-water-course">Dive Arizona</a></h2>
+            <h2><a href="https://divearizona.com/courses/open-water-course" target="_blank">Dive Arizona</a></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga qui necessitatibus eveniet doloremque blanditiis atque, incidunt itaque reiciendis recusandae porro ipsa. Sed odio impedit sunt quia voluptas temporibus quasi, perspiciatis sint distinctio excepturi harum pariatur? Perferendis magni repellendus fugiat, aliquid tenetur, perspiciatis doloribus, enim accusamus cupiditate laborum at debitis? Consequuntur perspiciatis neque eaque voluptatibus quibusdam iure accusamus provident officiis dolor, impedit placeat similique nihil incidunt sit quia delectus quisquam beatae fugiat consequatur. Officiis culpa a corrupti voluptatem nemo quo consequatur tempore, sunt incidunt suscipit est aperiam delectus quibusdam possimus, nulla quia. Possimus dolores corrupti sapiente cupiditate modi doloribus officiis perspiciatis, esse commodi dolore laborum velit consequuntur nobis minima nam neque voluptatem incidunt facilis est architecto saepe aut? Corrupti itaque, natus doloribus blanditiis beatae numquam harum distinctio labore tempora. Animi praesentium explicabo reprehenderit odit nesciunt hic dolorum porro culpa eaque obcaecati possimus quis quia, perferendis dignissimos quos velit inventore laboriosam doloribus?</p>
             <div class="cert-table">
                 <table>
@@ -151,7 +151,7 @@
                             <br>Prequisites Required</td>
                         </tr>
                         <tr>
-                            <th colspan="4"><a href="https://divearizona.com/courses">For Other Course Info Click Here</a></th>
+                            <th colspan="4"><a href="https://divearizona.com/courses" target="_blank">For Other Course Info Click Here</a></th>
                         </tr>
                     </tbody>
                 </table>
