--- a/project/pois.html
+++ b/project/pois.html
@@ -76,6 +76,7 @@
                 <input type="text" name="username" id="username" placeholder="Enter Your Name">
 
                 <input type="submit" value="Send Your Reccomendation!">
+            </fieldset>
         </form>
     </main>
     <footer>
